<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/whole_round_background_gray"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="15dip"
        android:paddingTop="15dip"
        android:text="@string/dialog_style2_title"
        android:textColor="#030303"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="15dip">

        <LinearLayout
            android:id="@+id/select_gallery_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dip"
                android:layout_height="60dip"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/mediaselect_gallery_icon" />

            <TextView
                android:id="@+id/gallery_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dip"
                android:text="@string/dialog_style2_gallary"
                android:textColor="#999"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/select_camera_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dip"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dip"
                android:layout_height="60dip"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/mediaselect_camera_icon" />

            <TextView
                android:id="@+id/camera_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dip"
                android:text="@string/dialog_style2_camera"
                android:textColor="#999"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/grey_line_slim" />

    <TextView
        android:id="@+id/dialog_cancel_btn"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/ucenter_cancel"
        android:textColor="#007aff"
        android:textSize="16sp" />

</LinearLayout>